# movie-kit

./: .gitignore  README.md  config.py  main.py  moviekit.kv  pyproject.toml
data/pages/: audiotrackadding.kv  mainpage.kv  subtitleadding.kv  subtitleextraction.kv  videoconversion.kv
src/components/: mixins.py  pages.py  widgets.py
src/schemas/: __init__.py  ffmpeg.py  file.py
src/services/: ffmpeg.py
src/utils/: common.py  filesystem.py  string.py
